<resources>
    <string name="app_name">app-studenton</string>
    <string name="student">Student</string>
    <string name="on">ON</string>
    <string name="splash_content_desc_img_logo">Imagem logo principal</string>
    <string name="lgpd_content_desc_img_bullet">imagem bullet</string>
    <string name="lgpd_btn_avancar">Avançar</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_perguntas">Perguntas</string>
    <string name="menu_salvos">Salvos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="login_Login">Login</string>
    <string name="login_bem_vindo">Bem Vindo</string>
    <string name="login_insira_credenciais">Insira suas credenciais para entrar</string>
    <string name="login_input_ra">RA:</string>
    <string name="login_input_senha">Senha:</string>
    <string name="login_button_acessar">Acessar</string>
    <string name="login_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="login_clique_aqui"><u>Clique aqui</u></string>
    <string name="login_erro_login">RA ou senha estão errados</string>
    <string name="login_erro_server">Aconteceu um erro inesperado, tente novamente mais tarde</string>
    <string name="login_erro_obrigatorio">Esse campo é obrigatório</string>
    <string name="login_erro_tamanho_caracteres_ra">O "RA" tem que ter, no mínimo, 3 caracteres</string>
    <string name="login_erro_tamanho_caracteres_senha">A Senha tem que ter, no mínimo, 5 caracteres</string>
    <string name="perfil_header">Perfil</string>
    <string name="perfil_btn_sair">Sair</string>
    <string name="perfil_btn_editar">Editar</string>
    <string name="perfil_tv_nome">Nome</string>
    <string name="perfil_tv_RA">R.A.</string>
    <string name="perfil_tv_curso">Curso</string>
    <string name="perfil_tv_semestre">Semestre</string>
    <string name="perfil_tv_email">E-mail</string>
    <string name="perfil_hint_nome">Paulo Duarte</string>
    <string name="perfil_hint_ra">01211097</string>
    <string name="perfil_hint_curso">Análise e desenvolvimento de sistemas</string>
    <string name="perfil_hint_semestre">4° Semestre</string>
    <string name="perfil_hint_email">pauloduarte@gmail.com</string>
    <string name="perfil_description_foto">foto de perfil</string>
    <string name="feed_menu_mais_relevante">Mais Relevante</string>
    <string name="feed_clique_responder">Clique aqui para responder</string>
    <string name="feed_respondido_sucesso">Respondido com sucesso!</string>
    <string name="feed_menu_feed_veterano">Feed</string>
    <string name="feed_menu_perguntas">Perguntas</string>
    <string name="feed_menu_minhas_colaboracoes">Minhas colaborações</string>
    <string name="feed_menu_publicacoes">Publicações</string>
    <string name="feed_item_simple_item_meio_respondeu">recebeu uma resposta de</string>
    <string name="feed_item_simple_item_meio_perguntou">fez uma pergunta</string>
    <string name="feed_item_simple_item_meio_publicou">publicou uma informação</string>
    <string name="feed_item_simple_item_dias_atras_0">Hoje</string>
    <string name="feed_item_simple_item_dias_atras_1">Ontem</string>
    <string name="feed_item_simple_item_dias_atras_2">2 dias atrás</string>
    <string name="feed_item_simple_item_dias_atras_3">3 dias atrás</string>
    <string name="feed_item_simple_item_dias_atras_4">4 dias atrás</string>
    <string name="feed_item_simple_item_dias_atras_5">5 dias atrás</string>
    <string name="feed_item_simple_item_dias_atras_6">6 dias atrás</string>
    <string name="feed_item_simple_item_dias_atras_7">7 dias atrás</string>
    <string name="feed_item_simple_item_dias_atras_else">Há um tempo atrás</string>
    <string name="feed_item_simple_item_tipo_publicacao_1">INFORMAÇÃO</string>
    <string name="feed_item_simple_item_tipo_publicacao_2">DÚVIDA</string>
    <string name="feed_content_description_img_sem_publicacao">Sem publicações nessa categoria</string>
    <string name="feed_content_description_img_backgroud">Fundo de tela</string>
    <string name="feed_content_description_img_sino">Notificações</string>
    <string name="feed_content_description_img_lupa">Lupa de pesquisa</string>
    <string name="feed_content_description_img_perguntar">icone de perguntar</string>
    <string name="feed_float_button_perguntar">perguntar</string>
    <string name="feed_simple_item_imagem_comentarios">Imagem de comentários</string>
    <string name="feed_simple_item_imagem_salvar">Imagem de Salvar</string>
    <string name="feed_simple_item_imagem_curtir">Imagem de Curtir</string>
    <string name="titulo_termos">Termos e \ncondições</string>
    <string name="texto1_termos">Privacidade em primeiro lugar</string>
    <string name="texto2_termos">Ao prosseguir concordo com o \nprocessamento dos meus dados pessoais \nde usuário para ter acesso aos recursos do \naplicativo Student On.</string>
    <string name="texto_modificado1">Veja mais na Política de Privacidade.</string>
    <string name="texto3_termos">Concordo também com a Política de \nPrivacidade e com os Termos de Uso.</string>
    <string name="texto4_termos">Autorizo a Student On a usar meus dados \npessoais (exceto dados de publicações) \npara enviar avisos por e-mail ou no app.*</string>
    <string name="texto5_termos">*Você pode revogar o consentimento \nquando quiser. Basta enviar um e-mail para support@studenton.com</string>
    <string name="aceitar_termos">Aceitar</string>
    <string name="configurar_perfil_header">Configurar Perfil</string>
    <string name="configurar_perfil_label_notificacoes">Notificações</string>
    <string name="configurar_perfil_atualizacoes">Enviar atualizações no meu e-mail</string>
    <string name="configurar_perfil_btn_voltar">Voltar</string>
    <string name="configurar_perfil_hide_senha">••••••••••••••</string>
    <string name="configurar_perfil_label_nome">Nome</string>
    <string name="configurar_perfil_label_senha">Senha</string>
    <string name="configurar_perfil_label_alterar">Alterar</string>
    <string name="alterar_senha_header">Criar nova senha</string>
    <string name="alterar_senha_btn_alterar">Alterar</string>
    <string name="alterar_senha_atual">Senha atual</string>
    <string name="alterar_senha_nova">Nova senha</string>
    <string name="alterar_senha_confirmar_nova">Confirmar nova senha</string>
    <string name="alterar_senha_erro_senhas_nao_batem">Nova senha e confirmar senha não batem</string>
    <string name="alterar_senha_erro_senha_menor_9">A senha deve conter, no mínimo, 9 caracteres</string>
    <string name="alterar_senha_erro_usuario_nao_encontrado">A sua senha atual está incorreta</string>
    <string name="alterar_senha_alerta_title">Senha alterada</string>
    <string name="alterar_senha_alerta_text">A sua senha foi alterada com sucesso.</string>
    <string name="texto1_bemvindo">Bem vindo ao Fórum SPTECH por Studen On!</string>
    <string name="texto2_bemvindo">As perguntas realizadas são enviadas para serem respondidas por um veterano e só então são postadas no feed</string>
    <string name="texto3_bemvindo">A comunidade inteira tem acesso a publicação e o conhecimento é multiplicado</string>
    <string name="texto4_titulo_bemvindo">Seja responsável!</string>
    <string name="texto4_bemvindo">Nada de respostas incompletas e que possam ser invasivas hein?!</string>
    <string name="esqueci_senha_btn_alterar">Alterar</string>
    <string name="esqueceu_senha_ra">RA</string>
    <string name="esqueceu_senha_email">Email</string>
    <string name="esqueceu_senha_senha_nova">Nova senha</string>
    <string name="esqueceu_senha_senha_nova_conf">Confirmar nova senha</string>
    <string name="esqueceu_senha_senha_erro_senhas_nao_batem">Nova senha e confirmar senha não batem</string>
    <string name="esqueceu_senha_senha_erro_senha_menor_7">A senha deve conter, no mínimo, 7 caracteres</string>
    <string name="esqueceu_senha_erro_servidor">Aconteceu um erro inesperado, tente novamente mais tarde</string>
    <string name="esqueceu_senha_nao_encontrado">Ra e/ou Email não encontrado</string>
    <string name="esqueceu_senmha_alterada_com_sucesso">Senha alterada com sucesso!</string>
    <string name="fragment_dialog_sair_btn_sair">SAIR</string>
    <string name="fragment_dialog_sair_btn_cancelar">CANCELAR</string>
    <string name="fragment_dialog_sair_title">Tem certeza que deseja Sair?</string>
    <string name="fragment_dialog_sair_img_ligar">Imagem de ligar/desligar</string>
    <string name="fragment_dialog_alterar_foto_title">Coloque um link de imagem para alterar sua foto de perfil</string>
    <string name="fragment_dialog_btn_alterar_foto">ALTERAR</string>
    <string name="fragment_dialog_btn_cancelar_alterar_foto">CANCELAR</string>
    <string name="alterar_foto_alerta_title">Foto de perfil alterada!</string>
    <string name="alterar_foto_alerta_text">A sua foto de perfil foi alterada com sucesso.</string>
    <string name="fragment_dialog_alterar_hint">URL da imagem</string>
    <string name="fragment_dialog_alterar_foto_img_perfil">Imagem de perfil</string>
    <string name="comentarios_bottomsheet_btn_comentar">Comentar</string>
    <string name="comentarios_bottomsheet_btn_responder">Responder</string>
    <string name="comentarios_bottomsheet_title_comentarios">Comentarios</string>
    <string name="comentarios_bottomsheet_title_resposta">Faça sua resposta</string>
    <string name="fragment_criar_publicacao_erro">Aconteceu um erro inesperado, tente novamente mais tarde</string>
    <string name="fragment_criar_publicacao_categoria">Selecione uma categoria</string>
    <string name="fragment_criar_publicacao_sucesso">Pergunta realizada com sucesso!</string>
    <string name="fragment_criar_publicacao_length_titulo">Insira pelo menos 5 caracteres</string>
    <string name="fragment_criar_publicacao_length_texto">Insira pelo menos 10 caracteres</string>
    <string name="fragment_criar_pergunta_title">Nova pergunta</string>
    <string name="fragment_criar_pergunta_hint_title_pergunta">Título da pergunta</string>
    <string name="fragment_criar_pergunta_hint_conteudo">Conteúdo da pergunta</string>
    <string name="fragment_criar_pergunta_btn_perguntar">Perguntar</string>
    <string name="deletar_salvo_title">Publicação salva apagada</string>
    <string name="title_salvo">Salvos</string>
    <string name="btn_excluir">excluir</string>
    <string name="deletar_salvo_text">Publicação salva foi apagada com sucesso da sua lista!</string>
    <string name="dias_atras_position1">Há</string>
    <string name="dias_atras_position2">dias</string>
    <string name="salvo_texto_status_enviado">Enviado</string>
    <string name="salvo_texto_status_duvida">Dúvida</string>
    <string name="salvo_texto_status_informacao">Informação</string>
    <string name="fragment_excluir_salvo_img_lixeira">Imagem de lixeira</string>
    <string name="perguntas_menu_respostas">Minhas Respostas</string>
    <string name="perguntas_menu_informacoes">Minhas Publicações</string>
    <string name="perguntas_nav_titulo_minhas_perguntas">Minhas Perguntas</string>
    <string name="perguntas_nav_titulo_minhas_colaboracoes">Minhas Colaborações</string>
    <string name="feed_item_simple_item_publicou_duvida">publicou uma dúvida</string>
    <string name="status_analise_pergunta">A resposta ficará visível após aprovação</string>
    <string name="status_pergunta_recusado">RECUSADO: Pergunta infringe as diretrizes da comunidade.</string>
    <string name="perguntas_text_resposta">Resposta</string>
    <string name="perguntas_text_enviado">Enviado</string>
    <string name="perguntas_status_analise">Análise</string>
    <string name="perguntas_status_aprovado">Aprovado</string>
    <string name="perguntas_status_recusado">Recusado</string>
    <string name="excluir_title">Apagar</string>
    <string name="fragment_dialog_excluir_salvo_title">Tem certeza que deseja excluir a publicação salva?</string>
</resources>