<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@drawable/fundo_white">

    <ImageView
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bullet100"
        android:contentDescription="@string/lgpd_content_desc_img_bullet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView

            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingHorizontal="32dp"
            android:textSize="32sp"
            android:text="@string/texto4_titulo_bemvindo"
            android:textColor="@color/azul_btn"

            />

        <TextView

            android:layout_marginVertical="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingHorizontal="40dp"
            android:textSize="32sp"


            android:text="@string/texto4_bemvindo"
            android:textColor="@color/feed_float_button_perguntar"

            />
    </LinearLayout>

<Button

    android:id="@+id/btn_avancar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="15dp"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="20dp"
    android:textAllCaps="true"
    android:backgroundTint="@color/azul_btn"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:background="@drawable/borda_arredondada"
    android:text="@string/lgpd_btn_avancar"/>

</LinearLayout>