<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@drawable/fundo_white">

    <ImageView
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bullet50"
        android:contentDescription="@string/lgpd_content_desc_img_bullet" />

    <TextView

        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:paddingHorizontal="40dp"
        android:textSize="32sp"

        android:text="@string/texto2_bemvindo"
        android:textColor="@color/feed_float_button_perguntar"

        />

<Button

    android:id="@+id/btn_avancar"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="15dp"
    android:textAllCaps="true"
    android:background="@drawable/borda_arredondada"
    android:backgroundTint="@color/azul_btn"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:text="@string/lgpd_btn_avancar"/>

</LinearLayout>