<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="220dp"
    android:layout_gravity="center">

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_dialog_sair"
        android:layout_margin="20dp"
        android:contentDescription="@string/fragment_dialog_sair_img_ligar"

        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_dialog_sair_title"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

    />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <TextView

            android:id="@+id/btn_cancelar"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:outlineProvider="none"

            android:background="@drawable/fragment_dialog_sair_btn_cancelar"

            android:text="@string/fragment_dialog_sair_btn_cancelar"
            android:textColor="@color/azul_btn"
            android:textStyle="bold"
            android:textAlignment="center"

            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="10dp"

        />

        <TextView

            android:id="@+id/btn_sair"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"

            android:background="@drawable/fragment_dialog_sair_btn_sair"

            android:text="@string/fragment_dialog_sair_btn_sair"
            android:textColor="@color/vermelho"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>