<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="328dp"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="51dp"
        android:layout_height="42dp"
        android:layout_margin="20dp"
        android:src="@drawable/perfil" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_dialog_alterar_foto_title"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="18dp"/>

    <TextView
        android:id="@+id/tv_msg_erro_troca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text = "Ocorreu um erro!"
        android:textSize="18sp"
        android:textColor="@color/vermelho"
        android:layout_gravity="center"/>


    <EditText
        android:id="@+id/et_alterar_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        android:background="@drawable/borda_arredondada"
        android:layout_margin="20dp"
        android:hint="@string/fragment_dialog_alterar_hint"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp">

        <TextView

            android:id="@+id/btn_alterar"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:outlineProvider="none"

            android:background="@drawable/fragment_dialog_sair_btn_cancelar"

            android:text="@string/fragment_dialog_btn_alterar_foto"
            android:textColor="@color/azul_btn"
            android:textStyle="bold"
            android:textAlignment="center"

            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="10dp"


            />

        <TextView
            android:id="@+id/btn_cancelar"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"

            android:background="@drawable/fragment_dialog_sair_btn_cancelar"

            android:text="@string/fragment_dialog_btn_cancelar_alterar_foto"
            android:textColor="@color/vermelho"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>