<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView

        android:id="@+id/img_backgroud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="-50dp"
        android:background="@drawable/login_backgroud"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

    />

    <ImageView

        android:id="@+id/img_logos"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"

        android:background="@drawable/login_logos"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

    />

    <TextView

        android:id="@+id/tv_bem_vindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="32dp"

        android:text="@string/login_bem_vindo"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:fontFamily="sans-serif-black"

        app:layout_constraintBottom_toBottomOf="@id/img_backgroud"
        app:layout_constraintLeft_toLeftOf="parent"

    />

    <TextView

        android:id="@+id/tv_insira_credenciais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="32dp"

        android:text="@string/login_insira_credenciais"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="sans-serif"

        app:layout_constraintTop_toBottomOf="@id/tv_bem_vindo"
        app:layout_constraintLeft_toLeftOf="parent"

    />

    <TextView

        android:id="@+id/loginText"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"

        android:fontFamily="sans-serif-black"
        android:text="@string/login_Login"
        android:textColor="@color/black"
        android:textSize="30sp"

        app:layout_constraintTop_toBottomOf="@id/img_backgroud"
        app:layout_constraintLeft_toLeftOf="parent"

    />

    <LinearLayout

        android:id="@+id/ll_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/ti_ra"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"

            app:errorEnabled="true"
            app:startIconDrawable="@drawable/login_icon_ra"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/ti_input_ra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_input_ra"

            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/ti_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"

            app:errorEnabled="true"
            app:startIconDrawable="@drawable/login_icon_senha">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/ti_input_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"
                android:hint="@string/login_input_senha"

            />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView

            android:id="@+id/tv_msg_erro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="Ra e senha estão incorretos"
            android:textColor="@color/login_erro"
            android:layout_gravity="center"

            />

    </LinearLayout>

    <Button

        android:id="@+id/btn_acessar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/login_input_selecionado_and_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/login_button_acessar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingVertical="10dp"
        android:background="@drawable/borda_arredondada"
        app:layout_constraintTop_toBottomOf="@id/ll_inputs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_acessar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/tv_esqueceu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"

            android:layout_marginTop="16dp"

            android:text="@string/login_esqueceu_senha"
            android:textAlignment="center"
            android:textColor="@color/login_esqueceu_senha"
            android:textSize="15sp"



        />

        <TextView

            android:id="@+id/tv_clique_aqui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"

            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"

            android:text="@string/login_clique_aqui"
            android:textAlignment="center"
            android:textColor="@color/login_esqueceu_senha"
            android:textSize="15sp"

        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>